tests/check/bounded_symbolic_chunkat_oob.co
// RUN: choreo -es -t cute %s 2>&1 | FileCheck %s

__co__ auto check_bounded_symbolic_chunkat(f32 [2,4] a) {
  parallel wg by 3 {
    local f32[2, 4] b[1];

    if (wg >= 1) {
      idx = wg - 1;
      dma.copy a => b[idx];
    }
  }
}

// CHECK: error: Index (::check_bounded_symbolic_chunkat::paraby_0::paraby_1::paraby_2::wg - 1) is out of bounds of the 1st dimension of array 'b', where the valid range is [0, 1)
// CHECK:         dma.copy a => b[idx];
// CHECK:                         ^
// CHECK: Totally 1 errors have been detected.